feat: whitebox scheme adjustment
* 新白盒方案，简化lightdm pam流程
* 修复错误的在auth阶段使用autostart用法

Log: whitebox scheme adjustment

--- a/debian/control
+++ b/debian/control
@@ -36,7 +36,7 @@ Depends: adduser,
          lsb-base (>= 3.0-6),
          ${misc:Depends},
          ${shlibs:Depends}
-Recommends: xserver-xorg
+Recommends: xserver-xorg, deepin-keyring-whitebox
 Suggests: accountsservice, upower, xserver-xephyr
 Provides: x-display-manager
 Description: simple display manager
