chore: adapt to qt6
as title

Log: as title

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends: debhelper-compat (= 13),
                libxdmcp-dev,
                libxklavier-dev,
                pkg-config,
-               qtbase5-dev,
+               qt6-base-dev,
                valac,
                yelp-tools
 Rules-Requires-Root: no
@@ -69,7 +69,7 @@ Description: simple display manager (GObject library)
  This package contains the GObject library for lightdm, used by the GTK+
  greeter.
 
-Package: liblightdm-qt5-3-0
+Package: liblightdm-qt6-3-0
 Section: libs
 Architecture: any
 Multi-Arch: same
@@ -77,8 +77,8 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends},
          ${shlibs:Depends},
 Recommends: lightdm,
-Description: LightDM Qt 5 client library
- A Qt 5 based library for LightDM clients to use to interface with LightDM.
+Description: LightDM Qt 6 client library
+ A Qt 6 based library for LightDM clients to use to interface with LightDM.
 
 Package: liblightdm-gobject-dev
 Section: libdevel
@@ -94,15 +94,15 @@ Description: simple display manager (GObject development files)
  This package contains the development files for lightdm.
  They can be used to build new greeters applications GTK+ based.
 
-Package: liblightdm-qt5-3-dev
+Package: liblightdm-qt6-3-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends},
-         liblightdm-qt5-3-0 (= ${binary:Version}),
-         qtbase5-dev,
-Description: LightDM Qt 5 client library (development files)
- A Qt 5 based library for LightDM clients to use to interface with LightDM.
+         liblightdm-qt6-3-0 (= ${binary:Version}),
+         qt6-base-dev,
+Description: LightDM Qt 6 client library (development files)
+ A Qt 6 based library for LightDM clients to use to interface with LightDM.
  .
  This package contains header files and development information, which
  is useful for building LightDM greeters and user switchers.
