--- a/debian/lightdm.service
+++ b/debian/lightdm.service
@@ -13,7 +13,8 @@ OnFailure=plymouth-quit.service
 
 [Service]
 ExecStart=/usr/sbin/lightdm
-#Restart=always
+Restart=on-failure
+RestartSec=5s
 IgnoreSIGPIPE=no
 BusName=org.freedesktop.DisplayManager
 
